Fix line break on Vercel

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- HOME (UNCHANGED) -->
   <section class="firstsection">
     <div class="leftsection">
-      Hi , My name is <span class="purple">Yash</span>
+      Hi , My name is&nbsp;<span class="purple">Yash</span>
       <div>and I am an Aspiring</div>
       <span id="element"></span> <br>
 
