Fix Yash text wrapping

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
   <!-- HOME (UNCHANGED) -->
   <section class="firstsection">
     <div class="leftsection">
-      Hi , My name is&nbsp;<span class="purple">Yash</span>
-      <div>and I am an Aspiring</div>
+  <span class="intro">
+    Hi , My name is <span class="purple">Yash</span>
+  </span>
+        <div>and I am an Aspiring</div>
       <span id="element"></span> <br>
 
       <div class="buttons">
