Fix Yash text wrapping

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <span class="intro">
     Hi , My name is <span class="purple">Yash</span>
   </span>
-        <div>and I am an Aspiring</div>
+        <div class="subtitle">and I am an Aspiring</div>
       <span id="element"></span> <br>
 
       <div class="buttons">
