Fix line break on Vercel

--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yash -ML Engineer Portfolio</title>
+    <title>Yash - ML Engineer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
+
+    <!-- Particle Background -->
+    <div class="particles" id="particles"></div>
+
     <header>
       <nav>
+        <!-- Y LOGO -->
+        <div class="logo" id="yLogo" onclick="triggerLogoEffect()">
+          <span class="logo-letter">Y</span>
+          <div class="logo-ring"></div>
+          <div class="logo-ripple" id="logoRipple"></div>
+        </div>
+
         <div class="left">Yash's Portfolio</div>
         <div class="right">
           <ul>
@@ -17,171 +31,231 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact Me</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
     </header>
-<main>
 
-  <!-- HOME (UNCHANGED) -->
-  <section id="home" class="firstsection">
-    <div class="leftsection">
-  <span class="intro">
-    Hi , My name is <span class="purple">Yash</span>
-  </span>
-        <div class="subtitle">and I am an Aspiring</div>
-      <span id="element"></span> <br>
-
-      <div class="buttons">
-        <a href="yash_resume.pdf" class="btn">Download Resume</a>
-        <a href="https://github.com/yashbhanushali17" target="_blank" class="btn">Visit GitHub</a>
-</div>
+    <!-- Easter egg modal -->
+    <div class="logo-modal" id="logoModal">
+      <div class="logo-modal-inner">
+        <span class="modal-close" onclick="closeModal()">✕</span>
+        <div class="modal-y">Y</div>
+        <h2>Hey, I'm Yash! 👋</h2>
+        <p>ML Engineer in the making. Click around to know more about me!</p>
+        <a href="#about" onclick="closeModal()" class="modal-btn">Explore →</a>
+      </div>
     </div>
 
-    <div class="rightsection">
-      <img src="bg.png" alt="" />
-    </div>
-  </section>
+    <main>
 
-  <!-- ABOUT -->
-  <section id="about" class="about-section">
-    <h1>About Me</h1>
-    <p>
-      I am Yash, an aspiring Machine Learning Engineer.
-      I love working on AI, Data Science, and building intelligent systems.
-      My goal is to become a professional ML Engineer and contribute to
-      impactful projects.
-    </p>
-  </section>
+      <!-- HOME -->
+      <section id="home" class="firstsection">
+        <div class="leftsection">
+          <div class="greeting-tag">✦ Available for Opportunities</div>
+          <span class="intro">
+            Hi, My name is <span class="purple glitch" data-text="Yash">Yash</span>
+          </span>
+          <div class="subtitle">and I am an Aspiring</div>
+          <span id="element"></span>
 
-  <!-- SKILLS -->
-  <section id="skills" class="skills-section">
-    <h1>Skills</h1>
-
-    <div class="skills-container">
-
-      <!-- Skill 1 -->
-      <div class="skill-card">
-        <img src="python.png" alt="Python">
-        <h3>Python</h3>
-
-        <div class="bar">
-          <div class="progress" style="width:80%"></div>
+          <div class="buttons">
+            <a href="yash_resume.pdf" class="btn btn-primary">
+              <span>Download Resume</span>
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
+            </a>
+            <a href="https://github.com/yashbhanushali17" target="_blank" class="btn btn-outline">
+              <span>Visit GitHub</span>
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/></svg>
+            </a>
+          </div>
         </div>
 
-        <p>8 / 10</p>
-      </div>
-
-      <!-- Skill 2 -->
-      <div class="skill-card">
-        <img src="ml.png" alt="ML">
-        <h3>Machine Learning</h3>
-
-        <div class="bar">
-          <div class="progress" style="width:70%"></div>
+        <div class="rightsection">
+          <div class="hero-image-wrap">
+            <img src="bg.png" alt="Yash" />
+            <div class="hero-glow"></div>
+          </div>
         </div>
+      </section>
 
-        <p>7 / 10</p>
-      </div>
-
-      <!-- Skill 3 -->
-      <div class="skill-card">
-        <img src="sklearn.png" alt="sklearn">
-        <h3>Sklearn</h3>
-
-        <div class="bar">
-          <div class="progress" style="width:60%"></div>
+      <!-- ABOUT -->
+      <section id="about" class="about-section reveal">
+        <div class="section-label">// about</div>
+        <h1>About Me</h1>
+        <div class="about-grid">
+          <div class="about-text">
+            <p>
+              I am <strong>Yash</strong>, an aspiring Machine Learning Engineer passionate about AI, Data Science, and building intelligent systems. My goal is to become a professional ML Engineer and contribute to impactful, real-world projects.
+            </p>
+            <p>I enjoy transforming raw data into smart solutions — whether it's training models, building pipelines, or creating intelligent applications.</p>
+          </div>
+          <div class="about-stats">
+            <div class="stat-box"><span class="stat-num">4+</span><span class="stat-label">Projects</span></div>
+            <div class="stat-box"><span class="stat-num">8/10</span><span class="stat-label">Python</span></div>
+            <div class="stat-box"><span class="stat-num">2+</span><span class="stat-label">Years Learning</span></div>
+            <div class="stat-box"><span class="stat-num">∞</span><span class="stat-label">Curiosity</span></div>
+          </div>
         </div>
+      </section>
 
-        <p>6 / 10</p>
-      </div>
+      <!-- SKILLS -->
+      <section id="skills" class="skills-section reveal">
+        <div class="section-label">// skills</div>
+        <h1>Skills</h1>
 
-      <!-- Skill 4 -->
-      <div class="skill-card">
-        <img src="sql.png" alt="SQL">
-        <h3>SQL</h3>
+        <div class="skills-container">
 
-        <div class="bar">
-          <div class="progress" style="width:70%"></div>
+          <div class="skill-card">
+            <img src="python.png" alt="Python">
+            <h3>Python</h3>
+            <div class="bar"><div class="progress" style="width:0%" data-width="80%"></div></div>
+            <p>8 / 10</p>
+          </div>
+
+          <div class="skill-card">
+            <img src="ml.png" alt="ML">
+            <h3>Machine Learning</h3>
+            <div class="bar"><div class="progress" style="width:0%" data-width="70%"></div></div>
+            <p>7 / 10</p>
+          </div>
+
+          <div class="skill-card">
+            <img src="sklearn.png" alt="Sklearn">
+            <h3>Sklearn</h3>
+            <div class="bar"><div class="progress" style="width:0%" data-width="60%"></div></div>
+            <p>6 / 10</p>
+          </div>
+
+          <div class="skill-card">
+            <img src="sql.png" alt="SQL">
+            <h3>SQL</h3>
+            <div class="bar"><div class="progress" style="width:0%" data-width="70%"></div></div>
+            <p>7 / 10</p>
+          </div>
+
         </div>
+      </section>
 
-        <p>7 / 10</p>
-      </div>
+      <!-- PROJECTS -->
+      <section id="projects" class="projects-section reveal">
+        <div class="section-label">// projects</div>
+        <h1>Projects</h1>
 
-    </div>
-  </section>
+        <div class="projects-container">
 
-  <!-- PROJECTS -->
-  <section id="projects" class="projects-section">
-    <h1>Projects</h1>
+          <div class="project-card">
+            <div class="project-icon">👁️</div>
+            <h3>Face Recognition System</h3>
+            <p>Built using Python and OpenCV. Real-time face detection and recognition pipeline.</p>
+            <div class="project-tags"><span>Python</span><span>OpenCV</span><span>ML</span></div>
+          </div>
 
-    <div class="projects-container">
+          <div class="project-card">
+            <div class="project-icon">📈</div>
+            <h3>Stock Price Prediction</h3>
+            <p>Used Machine Learning models to forecast stock prices with historical data.</p>
+            <div class="project-tags"><span>Python</span><span>Sklearn</span><span>Pandas</span></div>
+          </div>
 
-      <div class="project-card">
-        <h3>Face Recognition System</h3>
-        <p>Built using Python and OpenCV.</p>
-      </div>
+          <div class="project-card">
+            <div class="project-icon">🤖</div>
+            <h3>Chatbot</h3>
+            <p>AI-powered conversational assistant built with NLP techniques.</p>
+            <div class="project-tags"><span>NLP</span><span>Python</span><span>AI</span></div>
+          </div>
 
-      <div class="project-card">
-        <h3>Stock Price Prediction</h3>
-        <p>Used Machine Learning models.</p>
-      </div>
+        </div>
+      </section>
 
-      <div class="project-card">
-        <h3>Chatbot</h3>
-        <p>AI-powered conversational assistant.</p>
-      </div>
+      <!-- CONTACT -->
+      <section id="contact" class="contact-section reveal">
+        <div class="section-label">// contact</div>
+        <h1>Contact Me</h1>
 
-    </div>
-  </section>
+        <form id="contactForm">
+          <input type="text" name="name" placeholder="Your Name" required>
+          <input type="email" name="email" placeholder="Your Email" required>
+          <textarea name="message" placeholder="Your Message" required></textarea>
+          <button type="submit" class="btn btn-primary">Send Message →</button>
+        </form>
 
-  <!-- CONTACT -->
-  <section id="contact" class="contact-section">
-    <h1>Contact Me</h1>
+        <p id="statusMsg"></p>
+      </section>
 
-<form id="contactForm">
+    </main>
 
-  <input
-    type="text"
-    name="name"
-    placeholder="Your Name"
-    required
-  >
+    <footer class="footer">
+      <p>Crafted by <strong>Yash</strong> · ML Engineer in Making</p>
+    </footer>
 
-  <input
-    type="email"
-    name="email"
-    placeholder="Your Email"
-    required
-  >
-
-  <textarea
-    name="message"
-    placeholder="Your Message"
-    required
-  ></textarea>
-
-  <button type="submit" class="btn">
-    Send Message
-  </button>
-
-</form>
-
-<p id="statusMsg"></p>
-
-  </section>
-
-</main>
-
-  <script src="script.js"></script>
-    <!-- for getting animation we will get this cdn from typed.js github -->
+    <script src="script.js"></script>
     <script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script>
     <script>
+      // Typed.js
       var typed = new Typed("#element", {
-        strings: ["ML Engineer"],
-        typeSpeed: 50,
+        strings: ["ML Engineer.", "Data Scientist.", "AI Enthusiast."],
+        typeSpeed: 60,
+        backSpeed: 40,
+        loop: true,
+      });
+
+      // Logo Click Effect
+      function triggerLogoEffect() {
+        const ripple = document.getElementById('logoRipple');
+        ripple.classList.remove('active');
+        void ripple.offsetWidth;
+        ripple.classList.add('active');
+        document.getElementById('logoModal').classList.add('active');
+      }
+
+      function closeModal() {
+        document.getElementById('logoModal').classList.remove('active');
+      }
+
+      document.getElementById('logoModal').addEventListener('click', function(e) {
+        if (e.target === this) closeModal();
+      });
+
+      // Scroll Reveal
+      const revealEls = document.querySelectorAll('.reveal');
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(e => {
+          if (e.isIntersecting) {
+            e.target.classList.add('visible');
+            // Animate skill bars
+            e.target.querySelectorAll('.progress').forEach(bar => {
+              bar.style.width = bar.dataset.width;
+            });
+          }
+        });
+      }, { threshold: 0.15 });
+      revealEls.forEach(el => observer.observe(el));
+
+      // Particles
+      const container = document.getElementById('particles');
+      for (let i = 0; i < 60; i++) {
+        const p = document.createElement('div');
+        p.className = 'particle';
+        p.style.cssText = `
+          left:${Math.random()*100}%;
+          top:${Math.random()*100}%;
+          width:${Math.random()*3+1}px;
+          height:${Math.random()*3+1}px;
+          animation-duration:${Math.random()*10+8}s;
+          animation-delay:${Math.random()*5}s;
+          opacity:${Math.random()*0.5+0.1};
+        `;
+        container.appendChild(p);
+      }
+
+      // Navbar scroll effect
+      window.addEventListener('scroll', () => {
+        const nav = document.querySelector('nav');
+        nav.classList.toggle('scrolled', window.scrollY > 50);
       });
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
